--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework1</title>
-</head>
-<body>
-    1
-</body>
+    <head>
+        <title>Урок "Управление html содержимым из js</title>
+    </head>
+
+    <body>
+        <h1 id="title">Любимые цвета студента</h1>
+        <button id="title-change">1</button>
+        <ul id="list">
+            <li>Глеб, любимый цвет <span style='color: #ff2600'>#ff2600</span></li>
+            <li>Иван, любимый цвет <span style='color: #00f900'>#00f900></div></span></li>
+            <li>Люси, любимый цвет <span style='color: #0432ff'>#0432ff</span></li>
+        </ul>
+
+        <div>
+            <h3>Форма добавления</h3>
+            Имя:
+            <input type="text" />
+            <br /><br />
+            Цвет:
+            <input type="color" />
+            <br /><br />            
+            <button id="add-button">Добавить</button>
+        </div>
+        <br/>
+        <div>
+            <h3>Форма управления</h3>
+            <button>Удалить <span style="color: tomato">#ff2600</span></button>
+        </div>
+    </body>
+    <script>
+        const buttonElement = document.getElementById('add-button');
+        const listElement = document.getElementById('list');
+        let titleElement = document.getElementById('title');
+        const titleButtonElement =document.getElementById('title-change');
+
+        buttonElement.addEventListener('click', () => {
+            const oldListHtml = listElement.innerHTML;
+            listElement.innerHTML = oldListHtml + `<li>Глеб, любимый цвет <span style='color: #ff2600'>#ff2600</span></li>`;
+        });
+        titleButtonElement.addEventListener('click', () => {
+            if (titleElement.innerHTML = `<h1 id="title">Любимые цвета студента</h1>`) {
+                titleElement.innerHTML = `Самые любимые цвета студента`;
+            } else {
+                titleElement.innerHTML = `Любимые цвета студента`;
+            }
+        });
+    </script>
 </html>
