--- a/lesson1.html
+++ b/lesson1.html
@@ -14,10 +14,10 @@
         <div>
             <h3>Форма добавления</h3>
             Имя:
-            <input type="text" />
+            <input type="text" id="name-input"/>
             <br /><br />
             Цвет:
-            <input type="color" />
+            <input type="color"  id="color-input"/>
             <br /><br />            
             <button id="add-button">Добавить</button>
         </div>
@@ -30,10 +30,16 @@
     <script>
         const buttonElement = document.getElementById('add-button');
         const listElement = document.getElementById('list');
+        const nameElement = document.getElementById('name-input');
+        const colorElement = document.getElementById('color-input');
 
         buttonElement.addEventListener('click', () => {
             const oldListHtml = listElement.innerHTML;
-            listElement.innerHTML = oldListHtml + `<li>Глеб, любимый цвет <span style='color: #ff2600'>#ff2600</span></li>`;
+            listElement.innerHTML = oldListHtml + 
+            `<li>
+                ${nameElement.value}, любимый цвет <span style='color: ${colorElement.value}'>${colorElement.value}</span>
+            </li>`;
+            
         });
     </script>
 </html>
